# rust-code

./: AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  client-ci.yml  client-e2e.yml  client-playwright.yml  client-release.yml  desktop-ci.yml  desktop-release.yml  docker.yml  docs.yml  publish.yml  release-e2e.yml  release.yml
client/: pubspec.yaml
client/e2e/: client-web.spec.ts  package-lock.json  package.json  playwright.config.ts
client/integration_test/: app_test.dart
client/test_driver/: integration_test.dart
crates/cli/: Cargo.toml
crates/cli/src/: acp.rs  attach.rs  main.rs  output.rs  serve.rs  update.rs
crates/cli/src/commands/: heapdump.rs  mod.rs  settings_sync.rs  uninstall.rs
crates/cli/src/ui/: color_emit.rs  keybindings.rs  mod.rs  onboarding.rs  render.rs  repl.rs  setup.rs  terminal_query.rs  theme.rs  theme_runtime.rs  tui.rs  tui_repl.rs
crates/cli/tests/: config_cli.rs  output_format.rs  output_styles_subagent.rs  schedule.rs
crates/eval/: Cargo.toml
crates/eval/src/: runner.rs
crates/lib/: Cargo.toml
crates/lib/benches/: compaction.rs  startup.rs  token_estimation.rs
crates/lib/src/: error.rs  lib.rs  test_support.rs
crates/lib/src/config/: atomic.rs  mod.rs  schema.rs  supported_settings.rs
crates/lib/src/config/migrations/: mod.rs  v0_to_v1.rs  v1_to_v2.rs
crates/lib/src/hooks/: mod.rs
crates/lib/src/llm/: anthropic.rs  azure_openai.rs  client.rs  message.rs  mod.rs  normalize.rs  openai.rs  provider.rs  retry.rs  stream.rs
crates/lib/src/memory/: consolidation.rs  extraction.rs  mod.rs  scanner.rs  session_notes.rs  types.rs  writer.rs
crates/lib/src/output_styles/: mod.rs
crates/lib/src/permissions/: mod.rs  tracking.rs
crates/lib/src/query/: mod.rs
crates/lib/src/sandbox/: bwrap.rs  mod.rs  policy.rs  seatbelt.rs
crates/lib/src/schedule/: executor.rs  storage.rs
crates/lib/src/services/: background.rs  compact.rs  coordinator.rs  diagnostics.rs  file_cache.rs  mod.rs  notifier.rs  oauth.rs  output_store.rs  policy_limits.rs  pricing.rs  profiles.rs  rules.rs  secret_masker.rs  session.rs  settings_sync.rs  shell_passthrough.rs  subagent_colors.rs  tips.rs  tokens.rs  warnings.rs
crates/lib/src/services/mcp/: client.rs
crates/lib/src/services/plugins/: claude_adapter.rs  codex_adapter.rs  mod.rs  settings.rs
crates/lib/src/services/tips/bundled/: agent-worktrees.md  bundled-skills.md  cron-schedule.md  inherit-fg.md  model-tools.md  multi-edit.md  output-style-themes.md  plan-mode.md  plugin-marketplace.md  reload.md  remote-trigger.md  skills-list.md  syntax-theme.md  team-memory.md  tips-off.md
crates/lib/src/skills/: mod.rs  remote.rs
crates/lib/src/skills/bundled/: app-builder.md  batch.md  loop.md  remember.md  simplify.md  stuck.md  verify.md
crates/lib/src/state/: mod.rs
crates/lib/src/tools/: agent.rs  bash.rs  bash_parse.rs  brief.rs  config_tool.rs  cron_create.rs  cron_delete.rs  cron_list.rs  cron_support.rs  executor.rs  file_edit.rs  file_read.rs  grep.rs  mcp_auth.rs  mod.rs  monitor.rs  registry.rs  remote_trigger.rs
crates/lib/src/tools/bash/: bash_security.rs  command_semantics.rs  mod.rs  protected_paths.rs  read_only_validation.rs  sandbox_decision.rs  sed_edit_parser.rs  sed_validation.rs
crates/lib/src/tools/tasks/: executor.rs  mod.rs  tools.rs
crates/lib/src/tools/tasks/executors/: dream.rs  local_agent.rs  local_shell.rs  local_workflow.rs  mod.rs  monitor_mcp.rs  remote_agent.rs
crates/lib/tests/: config_integration.rs  config_migrations.rs  cron_tools_integration.rs  message_integration.rs  notifier_integration.rs  output_styles_integration.rs  permissions_integration.rs  plugin_loaders.rs  policy_limits_integration.rs  provider_integration.rs  sandbox_integration.rs  skills_integration.rs  task_kind_integration.rs
crates/lib/tests/fixtures/config_migrations/: current_input.json  v0_input.json  v0_to_current_expected.json  v1_input.json  v1_to_current_expected.json
crates/lib/tests/fixtures/output_styles/: broken.md  concise.md  friendly.md
crates/lib/tests/fixtures/plugins/claude-bar/: .mcp.json
crates/lib/tests/fixtures/plugins/claude-bar/.claude-plugin/: plugin.json
crates/lib/tests/fixtures/plugins/claude-bar/commands/: hello.md
crates/lib/tests/fixtures/plugins/claude-bar/skills/: baz.md
crates/lib/tests/fixtures/plugins/codex-baz/: config.toml
crates/lib/tests/fixtures/plugins/codex-baz/prompts/: echo.md
crates/lib/tests/fixtures/plugins/native-foo/: plugin.toml
crates/lib/tests/fixtures/plugins/native-foo/skills/: foo.md
docs/: config-migrations.mdx  installation.mdx  mint.json  overview.mdx  quickstart.mdx  security.mdx
docs/architecture/: compaction.mdx  mcp-protocol.mdx  provider-abstraction.mdx  tool-execution.mdx
docs/concepts/: memory.mdx  permissions.mdx  sessions.mdx
docs/configuration/: providers.mdx  settings.mdx  themes.mdx
docs/extending/: plugins.mdx  skills.mdx
docs/guides/: performance.mdx
docs/reference/: cli-flags.mdx  commands.mdx  tools.mdx
docs/src/: SUMMARY.md  installation.md  quickstart.md  security.md
docs/tutorials/: custom-skills.mdx  first-project.mdx  mcp-integration.mdx  multi-provider.mdx
npm/: package.json
scripts/: e2e-tests.sh
src/: error.rs  main.rs
src/commands/: mod.rs
src/compact/: mod.rs
src/config/: mod.rs  schema.rs
src/hooks/: mod.rs
src/llm/: anthropic.rs  client.rs  (+6 more)
(+80 files in other folders)
