[package]
name = "agent-code"
version = "0.13.1"
edition = "2024"
description = "An AI-powered coding agent for the terminal, written in pure Rust"
license = "MIT"
repository = "https://github.com/avala-ai/agent-code"
homepage = "https://github.com/avala-ai/agent-code"
readme = "../../README.md"
keywords = ["ai", "agent", "coding", "cli", "terminal"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Avala AI <emal@avala.ai>"]

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
agent-code-lib = { path = "../lib", version = "0.13.1" }

# CLI
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "sync", "signal", "macros"] }
anyhow = "1"

# Terminal UI
rustyline = { version = "18", features = ["derive"] }
crossterm = "0.29"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
termimad = "0.34"
syntect = "5"
pulldown-cmark = "0.12"
indicatif = "0.18"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Shared with lib (for types)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
toml = "1.1"
