[package]
name = "agent-code-lib"
version = "0.20.0"
edition = "2024"
description = "Agent engine library: LLM providers, tools, query loop, memory"
readme = "../../README.md"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "sync", "signal", "macros", "fs", "process"] }
futures = "0.3"
tokio-util = "0.7"

# HTTP & streaming
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async traits
async-trait = "0.1"

# File operations
glob = "0.3"
ignore = "0.4"

# Platform
libc = "0.2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tracing = "0.1"
pin-project-lite = "0.2"
bytes = "1"
regex = "1"
sha2 = "0.11"
similar = "3"
crossterm = "0.29"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
pulldown-cmark = "0.13"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "compaction"
harness = false

[[bench]]
name = "token_estimation"
harness = false

[[bench]]
name = "startup"
harness = false
